# dnd-app

./: CMakeLists.txt  DCprogram.py  README.md  abilityscore.py  imgui.ini  list.txt
src/: example_glfw_opengl3  imgui.ini  main.cpp
src/core/: randomizers.cpp  randomizers.h  randomizers.hpp
src/core/features/: spell_randomizer.py
src/core/generators/: ability_score_generator.cpp  dc_generator.cpp  spell_randomizer.cpp
src/ui/: application.cpp  application.h
